--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "googleapis": "^149.0.0"
   }
